ArgoCD/javaapp-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: javaapp
  name: javaapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: javaapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: javaapp
    spec:
      containers:
      - image: docker.io/georgechiu/cicdquay
        name: javaapp
        resources: {}
---
