ArgoCD/javaapp-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: javaapp
  name: javaapp
  namespace: javaapp
spec:
  host: ""
  port:
    targetPort: 8080
  to:
    kind: Service
    name: javaapp
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
